--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "ulx = 627263.7\n",
     "uly = 5596175.1\n",
     "lrx = 637115\n",
-    "lry = 5590485.2\n"
+    "lry = 5590485.2"
    ]
   },
   {
@@ -146,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "ROI CRS : EPSG:32736 \n",
+      "ROI CRS : EPSG:32631 \n",
       "\n",
-      "A new vector file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_K/WORK/ROI/extent_roi_32736.shp\n"
+      "A new vector file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/ROI/extent_roi_32631.shp\n"
      ]
     }
    ],
