--- a/notebooks/spectral_indices.ipynb
+++ b/notebooks/spectral_indices.ipynb
@@ -137,21 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "You chose to compute SWI !\nYou need : ['NDVI', 'NDWI'] \n\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/\n"
+      "You chose to compute NDVI !\nYou need : ['B04', 'B08'] \n\nSpectral index path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI/\n"
      ]
     }
    ],
    "source": [
     "# Set the index name you want to compute !\n",
     "# ---------------------------------------- #\n",
-    "index_name   = 'SWI'\n",
+    "index_name   = 'NDVI'\n",
     "# ---------------------------------------- #\n",
     "\n",
     "if index_name == 'NDVI':\n",
@@ -213,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "We need band/index NDVI to compute SWI\n--> 12 images are found \n\nWe need band/index NDWI to compute SWI\n--> 12 images are found \n\nCheck if the number of images found for each band/index is the same !!\n"
+      "We need band/index B04 to compute NDVI\n--> 2 images are found \n\nWe need band/index B08 to compute NDVI\n--> 2 images are found \n\nCheck if the number of images found for each band/index is the same !!\n"
      ]
     }
    ],
@@ -245,49 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Date : 20200116\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200116T105309_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200212\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200212T104049_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200316\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200316T104709_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200417\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200417T104021_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200520\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200520T105031_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200621\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200621T103629_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200719\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200719T105031_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200813\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200813T104629_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20200914\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20200914T104031_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20201019\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20201019T103959_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20201118\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20201118T104329_SWI.tif - already exists\n",
-      "-------------------------------------------\n",
-      "Date : 20201218\n",
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/SWI/T31UFS_20201218T104349_SWI.tif - already exists\n",
-      "-------------------------------------------\n"
+      "Date : 20170707\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI/T31UFS_20170707T104019_NDVI.tif\n",
+      "Date : 20200731\n",
+      "A new NDVI file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI/T31UFS_20200731T103629_NDVI.tif\n"
      ]
     }
    ],
@@ -405,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,14 +391,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/NDVI_CALC/NDVI_20200813_MINUS_20200116.tif - already exists\n"
+      "A new /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI_CALC/NDVI_20200731_MINUS_20170707.tif file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/NDVI_CALC/NDVI_20200731_MINUS_20170707.tif\n"
      ]
     }
    ],
    "source": [
     "# Choose the two dates you want to subtract\n",
-    "date_1 = '20200116'\n",
-    "date_2 = '20200813'\n",
+    "date_1 = '20170707'\n",
+    "date_2 = '20200731'\n",
     "\n",
     "# Get the spectral indices associated with the dates you have chosen\n",
     "index_file_1 = glob.glob(f'{index_path}*{date_1}*.tif')[0]\n",
