--- a/notebooks/random_forest_classification.ipynb
+++ b/notebooks/random_forest_classification.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "#from sklearn.datasets import make_classification\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, plot_confusion_matrix\n",
     "\n",
     "from pathlib import Path\n",
     "from IPython.display import display\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -144,35 +144,7 @@
      "text": [
       "Raster template file : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B02_10m_ROI_SCL.tif\n",
       "Rasterize /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/IN_SITU_SD/WALLONIA_2018_IN_SITU_ROI_cal.shp\n",
-      "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n",
-      "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n",
-      "Rasterize /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/IN_SITU_SD/WALLONIA_2018_IN_SITU_ROI_val.shp\n",
-      "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n",
-      "[[0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " ...\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]\n",
-      " [0 0 0 ... 0 0 0]]\n"
+      "Rasterize /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/IN_SITU_SD/WALLONIA_2018_IN_SITU_ROI_val.shp\n"
      ]
     }
    ],
@@ -247,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -351,14 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Random Forest training : 00:01:19.89\n"
+      "Random Forest training : 00:02:43.31\n"
      ]
     }
    ],
@@ -388,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,14 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Band 1 importance: 0.0745\nBand 2 importance: 0.0338\nBand 3 importance: 0.0822\nBand 4 importance: 0.0953\nBand 5 importance: 0.0835\nBand 6 importance: 0.0754\nBand 7 importance: 0.0909\nBand 8 importance: 0.0942\nBand 9 importance: 0.1058\nBand 10 importance: 0.0937\nBand 11 importance: 0.0909\nBand 12 importance: 0.0797\n"
+      "Band 1 importance: 0.0766\nBand 2 importance: 0.033\nBand 3 importance: 0.0832\nBand 4 importance: 0.0927\nBand 5 importance: 0.0833\nBand 6 importance: 0.0741\nBand 7 importance: 0.0899\nBand 8 importance: 0.0957\nBand 9 importance: 0.1061\nBand 10 importance: 0.0922\nBand 11 importance: 0.0918\nBand 12 importance: 0.0813\n"
      ]
     }
    ],
@@ -437,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +453,7 @@
      "name": "stdout",
      "text": [
       "Reshaped from (570, 986, 12) to (562020, 12)\n",
-      "Random Forest training : 00:01:23.27\n"
+      "Random Forest training : 00:02:01.43\n"
      ]
     }
    ],
