--- a/notebooks/graphics.ipynb
+++ b/notebooks/graphics.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.10"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -27,9 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Matplotlib : 3.3.4\nScipy : 1.5.2\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import geopandas as gpd\n",
