--- a/notebooks/zonal_stats.ipynb
+++ b/notebooks/zonal_stats.ipynb
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Rasterstats : 0.14.0\n"
+      "Rasterio : 1.1.0\nRasterstats : 0.14.0\n"
      ]
     }
    ],
@@ -87,6 +87,7 @@
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "\n",
+    "print(f'Rasterio : {rasterio.__version__}')\n",
     "print(f'Rasterstats : {rasterstats.__version__}')"
    ]
   },
