--- a/notebooks/sentinel_2_prepro.ipynb
+++ b/notebooks/sentinel_2_prepro.ipynb
@@ -1,32 +1,8 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
-  },
-  "metadata": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Preprocessing Sentinel-2 images\n",
     "\n",
@@ -41,20 +17,21 @@
     "3. Apply Scene Classification map (SCL) on reflectance images to mask invalid pixels\n",
     "\n",
     "<img src=\"figures/prepro_S2.png\" width=\"1000\">"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Numpy : 1.19.2\nPandas : 1.1.5\nGeoPandas : 0.8.1\nRasterio : 1.1.0\n"
+      "Numpy : 1.19.2\n",
+      "Pandas : 1.1.5\n",
+      "GeoPandas : 0.8.1\n",
+      "Rasterio : 1.1.0\n"
      ]
     }
    ],
@@ -79,11 +56,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set paths for input and output directories"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -91,10 +68,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "General work path is set to     : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\nL2A SAFE folders path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/L2A/\n"
+      "General work path is set to     : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/\n",
+      "L2A SAFE folders path is set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/L2A/\n"
      ]
     }
    ],
@@ -136,6 +114,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Select reflectance bands you want to work with\n",
     "\n",
@@ -155,9 +135,7 @@
     "- B11 - Short Wave Infra-Red (SWIR)\n",
     "- B12 - Short Wave Infra-Red (SWIR)\n",
     "\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -171,11 +149,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set resampling and masking parameters"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -204,11 +182,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set the list of L2A that will be processed"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -216,10 +194,23 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "12 L2A will be pre-processed \n\nS2A_MSIL2A_20200417T104021_N0214_R008_T31UFS_20200417T112906.SAFE\nS2A_MSIL2A_20200520T105031_N0214_R051_T31UFS_20200520T134332.SAFE\nS2A_MSIL2A_20200719T105031_N0214_R051_T31UFS_20200719T134605.SAFE\nS2A_MSIL2A_20200914T104031_N0214_R008_T31UFS_20200914T133417.SAFE\nS2B_MSIL2A_20200116T105309_N0213_R051_T31UFS_20200116T122813.SAFE\nS2B_MSIL2A_20200212T104049_N0214_R008_T31UFS_20200213T134833.SAFE\nS2B_MSIL2A_20200316T104709_N0214_R051_T31UFS_20200316T135256.SAFE\nS2B_MSIL2A_20200621T103629_N0214_R008_T31UFS_20200621T140338.SAFE\nS2B_MSIL2A_20200813T104629_N0214_R051_T31UFS_20200813T133458.SAFE\nS2B_MSIL2A_20201019T103959_N0214_R008_T31UFS_20201019T140516.SAFE\nS2B_MSIL2A_20201118T104329_N0214_R008_T31UFS_20201118T123717.SAFE\nS2B_MSIL2A_20201218T104349_N0214_R008_T31UFS_20201218T124059.SAFE\n"
+      "12 L2A will be pre-processed \n",
+      "\n",
+      "S2A_MSIL2A_20200417T104021_N0214_R008_T31UFS_20200417T112906.SAFE\n",
+      "S2A_MSIL2A_20200520T105031_N0214_R051_T31UFS_20200520T134332.SAFE\n",
+      "S2A_MSIL2A_20200719T105031_N0214_R051_T31UFS_20200719T134605.SAFE\n",
+      "S2A_MSIL2A_20200914T104031_N0214_R008_T31UFS_20200914T133417.SAFE\n",
+      "S2B_MSIL2A_20200116T105309_N0213_R051_T31UFS_20200116T122813.SAFE\n",
+      "S2B_MSIL2A_20200212T104049_N0214_R008_T31UFS_20200213T134833.SAFE\n",
+      "S2B_MSIL2A_20200316T104709_N0214_R051_T31UFS_20200316T135256.SAFE\n",
+      "S2B_MSIL2A_20200621T103629_N0214_R008_T31UFS_20200621T140338.SAFE\n",
+      "S2B_MSIL2A_20200813T104629_N0214_R051_T31UFS_20200813T133458.SAFE\n",
+      "S2B_MSIL2A_20201019T103959_N0214_R008_T31UFS_20201019T140516.SAFE\n",
+      "S2B_MSIL2A_20201118T104329_N0214_R008_T31UFS_20201118T123717.SAFE\n",
+      "S2B_MSIL2A_20201218T104349_N0214_R008_T31UFS_20201218T124059.SAFE\n"
      ]
     }
    ],
@@ -234,15 +225,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1. Resample images at 20m resolution to 10m\n",
     "\n",
     "### 1.1 Resample Scene Classification map\n",
     "\n",
     "Only if you are planning to work at 10m resolution. If you are planning to work at 20m resolution, you can skip this step."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -250,8 +241,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200417T104021_SCL_10m.tif - already exists\n",
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200520T105031_SCL_10m.tif - already exists\n",
@@ -315,15 +306,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 1.2 Resample Bottom-Of-Atmosphere corrected reflectance\n",
     "\n",
     "If you work only with Blue (B02), Green (B03), Red (B04) and NIR (B08) bands, you don't have to do the resampling step because theses reflectances are already available at 10m resolution.\n",
     "\n",
     "This step is only necessary if you work with bands 5,6,7,8A,11,12 which are only available at 20m resolution."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -331,8 +322,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Band : B11\n",
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/1_L2A_RESAMPLED/T31UFS_20200417T104021_B11_10m.tif - already exists\n",
@@ -412,11 +403,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2. Clip images to the extent of Region of Interest (ROI)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -424,8 +415,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/2_L2A_CLIPPED/T31UFS_20200116T105309_B05_10m_ROI.tif - already exists\n",
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/2_L2A_CLIPPED/T31UFS_20200116T105309_B11_10m_ROI.tif - already exists\n",
@@ -543,11 +534,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 3. Apply Scene Classification map (SCL) on reflectance images to mask invalid pixels"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -555,8 +546,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B02_10m_ROI_SCL.tif - already exists\n",
       "--> /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/3_L2A_MASKED/T31UFS_20200116T105309_B03_10m_ROI_SCL.tif - already exists\n",
@@ -715,5 +706,26 @@
     "        print(f'--> {im_file_scl} - already exists')\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
