--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -1,27 +1,8 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Build Region of Interest with GeoPandas\n",
     "\n",
@@ -51,20 +32,19 @@
     "\n",
     "\n",
     "<img src=\"figures/ROI_box.png\" width=\"500\">"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Pandas    : 1.1.5\nGeoPandas : 0.8.1\n"
+      "Pandas    : 1.1.5\n",
+      "GeoPandas : 0.8.1\n"
      ]
     }
    ],
@@ -80,11 +60,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set directory"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -116,11 +96,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set coordinates of your ROI - be carefull of the crs_src you chose!\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -138,11 +118,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Build shapefile"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -150,8 +130,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "ROI CRS : EPSG:32631 \n",
       "\n",
@@ -191,5 +171,21 @@
     "    print('The ROI vector file already exists --> delete it or change the variable \"roi_name\" if you want to create a new one')\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": ""
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
