--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Build Region of Interest with GeoPandas\n",
     "\n",
@@ -32,22 +31,12 @@
     "\n",
     "\n",
     "<img src=\"figures/ROI_box.png\" width=\"500\">"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pandas    : 1.1.5\n",
-      "GeoPandas : 0.8.1\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
    "source": [
     "import os\n",
     "import geopandas as gpd\n",
@@ -57,20 +46,29 @@
     "\n",
     "print(f'Pandas    : {pd.__version__}')\n",
     "print(f'GeoPandas : {gpd.__version__}')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Pandas    : 1.1.5\n",
+      "GeoPandas : 0.8.1\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Set directory"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "#computer_path = 'X:/'\n",
     "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
@@ -93,20 +91,20 @@
     "roi_extension = '.shp'\n",
     "\n",
     "roi_file = f'{roi_path}{roi_name}_{crs_dst[5:]}{roi_extension}'"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Set coordinates of your ROI - be carefull of the crs_src you chose!\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
     "# EPSG of your coordinates\n",
     "crs_src = 'EPSG:32631'\n",
@@ -115,30 +113,20 @@
     "uly = 5596175.1\n",
     "lrx = 637115\n",
     "lry = 5590485.2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Build shapefile"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ROI CRS : EPSG:32631 \n",
-      "\n",
-      "A new vector file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/ROI/extent_roi_32631.shp\n"
-     ]
-    }
-   ],
    "source": [
     "# Create a list with the longitude coordinates (x)\n",
     "lon_point_list = [ulx, lrx, lrx, ulx, ulx]\n",
@@ -169,7 +157,19 @@
     "    print(f'A new vector file is created : {roi_file}')\n",
     "else:\n",
     "    print('The ROI vector file already exists --> delete it or change the variable \"roi_name\" if you want to create a new one')\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ROI CRS : EPSG:32631 \n",
+      "\n",
+      "A new vector file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/ROI/extent_roi_32631.shp\n"
+     ]
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -177,12 +177,20 @@
    "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
   },
   "language_info": {
    "name": "python",
-   "version": ""
+   "version": "3.6.10",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "orig_nbformat": 2
  },
