--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Build Region of Interest with GeoPandas\n",
     "\n",
@@ -31,12 +32,22 @@
     "\n",
     "\n",
     "<img src=\"figures/ROI_box.png\" width=\"500\">"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas    : 1.1.5\n",
+      "GeoPandas : 0.8.0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import geopandas as gpd\n",
@@ -46,32 +57,22 @@
     "\n",
     "print(f'Pandas    : {pd.__version__}')\n",
     "print(f'GeoPandas : {gpd.__version__}')"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Pandas    : 1.1.5\n",
-      "GeoPandas : 0.8.1\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set directory"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "#computer_path = 'X:/'\n",
-    "computer_path = '/Volumes/nbdid-sst-lbrat2104/'\n",
+    "computer_path = '/export/miro/ndeffense/LBRAT2104/'\n",
     "grp_letter    = 'X'\n",
     "\n",
     "# Directory for all work files\n",
@@ -91,20 +92,20 @@
     "roi_extension = '.shp'\n",
     "\n",
     "roi_file = f'{roi_path}{roi_name}_{crs_dst[5:]}{roi_extension}'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set coordinates of your ROI - be carefull of the crs_src you chose!\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# EPSG of your coordinates\n",
     "crs_src = 'EPSG:32631'\n",
@@ -113,20 +114,30 @@
     "uly = 5596175.1\n",
     "lrx = 637115\n",
     "lry = 5590485.2"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Build shapefile"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROI CRS : EPSG:32631 \n",
+      "\n",
+      "The ROI vector file already exists --> delete it or change the variable \"roi_name\" if you want to create a new one\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list with the longitude coordinates (x)\n",
     "lon_point_list = [ulx, lrx, lrx, ulx, ulx]\n",
@@ -157,40 +168,28 @@
     "    print(f'A new vector file is created : {roi_file}')\n",
     "else:\n",
     "    print('The ROI vector file already exists --> delete it or change the variable \"roi_name\" if you want to create a new one')\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "ROI CRS : EPSG:32631 \n",
-      "\n",
-      "A new vector file is created : /Volumes/nbdid-sst-lbrat2104/GROUP_N/WORK/ROI/extent_roi_32631.shp\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd"
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
+   "display_name": "Python 3.6.12 64-bit",
+   "name": "python3"
   },
   "language_info": {
-   "name": "python",
-   "version": "3.6.10",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.12"
   },
   "orig_nbformat": 2
  },
