add frequency notebook

--- a/notebooks/region_of_interest.ipynb
+++ b/notebooks/region_of_interest.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -54,6 +54,9 @@
     "import pandas as pd\n",
     "from shapely.geometry import Polygon\n",
     "from pathlib import Path\n",
+    "import IPython.display\n",
+    "from IPython.display import display\n",
+    "from sentinelhub import BBox\n",
     "\n",
     "print(f'Pandas    : {pd.__version__}')\n",
     "print(f'GeoPandas : {gpd.__version__}')"
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +116,73 @@
     "ulx = 627263.7\n",
     "uly = 5596175.1\n",
     "lrx = 637115\n",
-    "lry = 5590485.2"
+    "lry = 5590485.2\n",
+    "\n",
+    "# WGS84 - EPSG:4326\n",
+    "\n",
+    "ulx_4326 = 4.7946375\n",
+    "uly_4326 = 50.5037005\n",
+    "lrx_4326 = 4.9313909\n",
+    "lry_4326 = 50.4503348\n",
+    "\n",
+    "bbox = ulx_4326, uly_4326, lrx_4326, lry_4326"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/geo+json": {
+       "coordinates": [
+        [
+         [
+          4.7946375,
+          50.4503348
+         ],
+         [
+          4.7946375,
+          50.5037005
+         ],
+         [
+          4.9313909,
+          50.5037005
+         ],
+         [
+          4.9313909,
+          50.4503348
+         ],
+         [
+          4.7946375,
+          50.4503348
+         ]
+        ]
+       ],
+       "crs": {
+        "properties": {
+         "name": "urn:ogc:def:crs:EPSG::4326"
+        },
+        "type": "name"
+       },
+       "type": "Polygon"
+      },
+      "text/plain": [
+       "<IPython.display.GeoJSON object>"
+      ]
+     },
+     "metadata": {
+      "application/geo+json": {
+       "expanded": false,
+       "root": "root"
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "IPython.display.GeoJSON(BBox(bbox,crs=4326).get_geojson())"
    ]
   },
   {
