--- a/notebooks/zonal_stats.ipynb
+++ b/notebooks/zonal_stats.ipynb
@@ -1,27 +1,8 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3610jvsc74a57bd0d44a822591a3717b24d3edf137db462f6168d56f0b857c252a9153258824edbd",
-   "display_name": "Python 3.6.10 64-bit ('python_3_6': conda)"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Zonal Statistics\n",
     "\n",
@@ -57,9 +38,7 @@
     "- percentile (see note below for details)\n",
     "\n",
     "https://pythonhosted.org/rasterstats/manual.html\n"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -67,10 +46,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Rasterio : 1.1.0\nRasterstats : 0.14.0\n"
+      "Rasterio : 1.0.8\n",
+      "Rasterstats : 0.14.0\n"
      ]
     }
    ],
@@ -92,6 +72,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Choose the spectral index and the zonal statistic you want to calculate\n",
     "\n",
@@ -99,9 +81,7 @@
     "- max\n",
     "- mean\n",
     "- count"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -117,13 +97,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Set paths for input and output directories\n",
     "\n",
     "Create directories if there are missing using `Path` and `mkdir`"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -131,8 +111,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Zonal Stats path are set to : /Volumes/nbdid-sst-lbrat2104/GROUP_X/WORK/ZONAL_STATS/\n"
      ]
@@ -169,11 +149,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Zonal statistics"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -232,11 +212,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Zonal Histograms"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -244,10 +224,39 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "FID 1877\n[0 2 4 7]\n[561672    123      1    224]\nFID 1878\n[0 2 4 5 7]\n[561312    684      6      5     13]\nFID 1879\n[0 2 4 5 7]\n[561655     37     18      2    308]\nFID 1880\n[0 2 4 5 7]\n[561742     40    226      3      9]\nFID 3251\n[0 2 4 7]\n[561269    365     12    374]\nFID 3252\n[0 2 4 5 7]\n[561194    330     64     33    399]\nFID 15441\n[0 2 3 4 5 7]\n[561579    181     13    105     46     96]\nFID 15607\n[0 4 7]\n[561730    271     19]\nFID 15608\n[0 2 4 7]\n[561373      1      6    640]\nFID 15609\n[0 5 7]\n[561421      9    590]\n"
+      "FID 1877\n",
+      "[0 2 4 7]\n",
+      "[561672    123      1    224]\n",
+      "FID 1878\n",
+      "[0 2 4 5 7]\n",
+      "[561312    684      6      5     13]\n",
+      "FID 1879\n",
+      "[0 2 4 5 7]\n",
+      "[561655     37     18      2    308]\n",
+      "FID 1880\n",
+      "[0 2 4 5 7]\n",
+      "[561742     40    226      3      9]\n",
+      "FID 3251\n",
+      "[0 2 4 7]\n",
+      "[561269    365     12    374]\n",
+      "FID 3252\n",
+      "[0 2 4 5 7]\n",
+      "[561194    330     64     33    399]\n",
+      "FID 15441\n",
+      "[0 2 3 4 5 7]\n",
+      "[561579    181     13    105     46     96]\n",
+      "FID 15607\n",
+      "[0 4 7]\n",
+      "[561730    271     19]\n",
+      "FID 15608\n",
+      "[0 2 4 7]\n",
+      "[561373      1      6    640]\n",
+      "FID 15609\n",
+      "[0 5 7]\n",
+      "[561421      9    590]\n"
      ]
     }
    ],
@@ -286,5 +295,29 @@
     "src.close()\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "interpreter": {
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.6.12 64-bit",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.12"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
