clean eo in situ

--- a/notebooks_working/EOStat/clean_in_situ_senegal.ipynb
+++ b/notebooks_working/EOStat/clean_in_situ_senegal.ipynb
@@ -26,17 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpx_path = '/export/projects/FAO-EOStat-Senegal/Assemble/'\n",
+    "path = '/export/projects/FAO-EOStat-Senegal/'\n",
     "\n",
-    "odk_path = '/export/projects/FAO-EOStat-Senegal/FormSenegal05/'\n",
-    "\n",
-    "odk_csv = f'{odk_path}FormSenegal05.csv'\n",
-    "\n",
-    "odk_shp = f'{odk_path}polygons_ODK.shp'"
+    "odk_csv = f'{path}Assemble/FormSenegal05.csv'\n",
+    "odk_shp = f'{path}FormSenegal05/polygons_ODK.shp'"
    ]
   },
   {
@@ -48,15 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gps_shp_output = '/export/projects/FAO-EOStat-Senegal/Output_Nico/gps_with_data.shp'\n",
+    "gps_shp_output = f'{path}Output_Nico/gps_with_data.shp'\n",
     "\n",
-    "odk_shp_output = '/export/projects/FAO-EOStat-Senegal/Output_Nico/odk_with_data.shp'\n",
+    "odk_shp_output = f'{path}Output_Nico/odk_with_data.shp'\n",
     "\n",
-    "map_html_output = '/export/miro/ndeffense/LBRAT2104/GIT/eo-toolbox/notebooks_working/EOStat/odk_gps_with_data.html'"
+    "map_html_output = f'{path}Output_Nico/odk_gps_with_data.html'"
    ]
   },
   {
@@ -68,25 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Good PID : 838\n",
-      "Wrong PID : 36\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "dict_gpx_list = []\n",
     "\n",
     "wrong_pid = 0\n",
     "\n",
-    "for gpx_file in glob.glob(f'{gpx_path}*/*.gpx'):\n",
+    "for gpx_file in glob.glob(f'{path}Assemble/*/*.gpx'):\n",
     "\n",
     "    filename = os.path.basename(gpx_file)\n",
     "\n",
