--- a/notebooks_working/EOStat/clean_in_situ_senegal.ipynb
+++ b/notebooks_working/EOStat/clean_in_situ_senegal.ipynb
@@ -67,7 +67,16 @@
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good PID : 838\n",
+      "Wrong PID : 36\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "dict_gpx_list = []\n",
