--- a/notebooks_working/EOStat/clean_in_situ_senegal.ipynb
+++ b/notebooks_working/EOStat/clean_in_situ_senegal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,6 @@
     "import fiona\n",
     "from shapely.geometry import Polygon, mapping\n",
     "import matplotlib.pyplot as plt\n",
-    "#import folium\n",
     "import rasterio\n",
     "import rasterio.mask\n",
     "import rasterio.plot\n",
@@ -25,7 +24,6 @@
     "\n",
     "sys.path.insert(0, tools_path)\n",
     "\n",
-    "#import folium_def\n",
     "import remove_overlap\n",
     "import crop_distribution"
    ]
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,12 +46,10 @@
     "gps_xlsx = f'{path}GPS/base_nioro.xlsx'\n",
     "\n",
     "sophie_shp = f'{path}Noncrop_SophieL/noncrop_tot_senegal_calibration_nioro.shp'\n",
-    "all_nc_shp = f'{path}SHP_NON_CROP/all_non_crop.shp'\n",
     "\n",
     "odk_crop_csv     = f'{path}ODK/FormSenegal05.csv'\n",
     "odk_non_crop_csv = f'{path}ODK/FormSenegal07.csv'\n",
     "\n",
-    "#roi_shp = f'{path}ROI/Senegal_DepartementNioro.shp'\n",
     "\n",
     "lut_crop_xlsx         = f'{path}LUT/LUT_crop.xlsx'\n",
     "lut_non_crop_xlsx     = f'{path}LUT/LUT_non_crop.xlsx'\n",
@@ -62,7 +58,7 @@
     "crop_dictionary_xlsx  = f'/export/projects/Sen4Stat/WORK/LUT/crop_dictionary_new.xlsx'\n",
     "\n",
     "\n",
-    "shp_path = '/export/projects/FAO-EOStat-Senegal/shp_temp_3/'\n"
+    "shp_path = '/export/projects/FAO-EOStat-Senegal/shp_temp_4/'\n"
    ]
   },
   {
@@ -74,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +362,7 @@
        "4          5      Coton    1921                          Cotton"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -5115,7 +5111,7 @@
        "4         00.01:34:51  Enqueteurnior3  only in using data  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5135,7 +5131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -5224,7 +5220,7 @@
        "4    622020673414    1421  Groundnuts   9156.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5266,7 +5262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -5369,7 +5365,7 @@
        "3    POLYGON ((429974.731 1516287.245, 429976.051 1...  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5380,7 +5376,6 @@
     "gpx_path = f'{path}GPS/*/*'\n",
     "\n",
     "for gpx_file in glob.glob(gpx_path):\n",
-    "#for gpx_file in glob.glob(f'/export/miro/tcastin/ODKCollect/Parcelles_GPX/Piste_6220205-5-71-3-2*'):\n",
     "\n",
     "    filename = os.path.basename(gpx_file)\n",
     "    \n",
@@ -5420,7 +5415,6 @@
     "\n",
     "df['geometry'] = df.coordinates.apply(Polygon)\n",
     "\n",
-    "\n",
     "df = df.drop('coordinates', axis=1)\n",
     "\n",
     "print(f'Number of GPX files : {len(glob.glob(gpx_path))} --> {len(df)} (without duplicates)')\n",
@@ -5429,7 +5423,7 @@
     "\n",
     "gps_gdf = gpd.GeoDataFrame(df, crs='epsg:4326', geometry='geometry').to_crs(epsg=32628).sort_values(by=['valid_id','id_gps'])\n",
     "\n",
-    "gps_gdf.to_file(f'{shp_path}gps_ori.shp')\n",
+    "#gps_gdf.to_file(f'{shp_path}gps_ori.shp')\n",
     "\n",
     "print(f'--> There are {len(gps_gdf)} polygons obtained with the GPS')\n",
     "\n",
@@ -5445,7 +5439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -5459,7 +5453,8 @@
       "--> 19 rows in the DB are not linked to a GPS polygon!\n",
       "Outer join 378\n",
       "After removing polygons overlapping non-crop polygon : 343\n",
-      "After removing polygons where area is greater than 100000 square meters : 343\n"
+      "After removing polygons where area is greater than 100000 square meters : 343\n",
+      "After removing polygons where area (after negative buffer) is less than 300 square meters : 335\n"
      ]
     },
     {
@@ -5480,7 +5475,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After removing polygons where area (after negative buffer) is less than 300 square meters : 335\n",
       "--> There are 335 polygons obtained with the GPS after cleaning\n"
      ]
     },
@@ -5573,7 +5567,7 @@
        "4  POLYGON ((400791.850 1532870.364, 400815.855 1...  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5592,8 +5586,6 @@
     "gps_outer_gdf = gps_gdf.merge(clean_gps_data_df, on='id_gps', how='outer')\n",
     "print(f'Outer join {len(gps_outer_gdf)}')\n",
     "gps_outer_gdf.to_file(f'{shp_path}gps_outer_join_for_thib_3.shp')\n",
-    "\n",
-    "\n",
     "\n",
     "gps_clean_gdf = gps_inner_gdf\n",
     "\n",
@@ -5654,7 +5646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5749,7 +5741,7 @@
        "4  POLYGON ((437196.697 1503108.915, 437209.481 1...  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5808,9 +5800,9 @@
     "odk_dup_gdf = odk_gdf[odk_gdf.duplicated('id_odk', keep=False)]\n",
     "\n",
     "\n",
-    "odk_dup_gdf.to_file(f'{shp_path}odk_crop_duplicates_ori.shp')\n",
+    "#odk_dup_gdf.to_file(f'{shp_path}odk_crop_duplicates_ori.shp')\n",
     "\n",
-    "odk_gdf.to_file(f'{shp_path}odk_crop_ori.shp')\n",
+    "#odk_gdf.to_file(f'{shp_path}odk_crop_ori.shp')\n",
     "\n",
     "\n",
     "print(f'--> There are {len(odk_gdf)} polygons obtained with ODK')\n",
@@ -5828,7 +5820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -5931,7 +5923,7 @@
        "6  POLYGON ((429800.703 1515346.022, 429798.793 1...  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6376,7 +6368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -6456,13 +6448,13 @@
        "4    6999    10510.04  POLYGON ((386562.660 1533614.206, 386463.612 1..."
       ]
      },
-     "execution_count": 55,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "non_crop_gdf = gpd.read_file(all_nc_shp)\n",
+    "non_crop_gdf = gpd.read_file(f'{path}SHP_NON_CROP/all_non_crop.shp')\n",
     "\n",
     "non_crop_gdf['area_db'] = non_crop_gdf['geometry'].area.round(2)\n",
     "\n",
@@ -7221,6 +7213,9 @@
     }
    ],
    "source": [
+    "import folium\n",
+    "import folium_def\n",
+    "\n",
     "#f = folium.Figure(width=1000, height=700)\n",
     "\n",
     "m = folium.Map(location = [13.743747099563299, -15.772308355932424], zoom_start=11.5)#.add_to(f)\n",
